2008-11-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Cope with absent Perl modules threads and Thread::Queue.
	* automake.in: Instead of `use threads', use `require threads;
	import threads' inside a BEGIN section.  Likewise for
	Thread::Queue.
	* lib/Automake/ChannelDefs.pm (Automake::ChannelDefs): Likewise.
	* lib/Automake/tests/Condition-t.pl: Likewise.
	* lib/Automake/tests/DisjConditions-t.pl: Likewise.
	* configure.ac: Likewise, use `require' and `import'.
	Report by Eric Blake, fix suggested by Ben Pfaff.

2008-11-04  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Multiple 'make uninstall' should not fail even for TEXINFOS.
	* lib/am/texinfos.am (uninstall-info-am): Do not fail due to
	install-info if the installed file does not exist (any more).
	* tests/txinfo26.test: Issue multiple `make uninstall'.
	* tests/instmany-mans.test: Likewise.
	* tests/instmany-python.test: Likewise.
	* tests/instmany.test: Likewise.
	* tests/txinfo26.test: Likewise.
	* NEWS: Update.

2008-11-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New public macro AM_SUBST_NOTMAKE.
	* m4/substnot.m4 (AM_SUBST_NOTMAKE): New public macro; invoke
	_AM_SUBST_NOTMAKE with arguments.
	* doc/automake.texi (Optional): Document it.
	* NEWS: Update.
	* tests/subst4.test: New test.
	* tests/Makefile.am: Update.
	Suggestion by Bruno Haible.

	Fix regression introduced by AM_DEFAULT_SOURCE_EXT.
	* automake.in (handle_source_transform): Use the right variable
	when determining whether to apply the old rule for the libtool
	library default source name.
	Testsuite failure exposed by Bob Proulx' build daemon.

2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New maintainer target release-stats.
	* Makefile.am (release-stats): New target, to help computing the
	entries in the statistics table in automake.texi.
	* doc/automake.texi (Releases): Reformat a bit.  Add number of
	generated files.  Add entry for 1.10.1.

	Choose default source extension: AM_DEFAULT_SOURCE_EXT.