@@ -468,7 +468,7 @@ my %required_targets =
    'install-man' => 1,
   );
 
-# Set to 1 if this run will create the Makefile.in that distribute
+# Set to 1 if this run will create the Makefile.in that distributes
 # the files in config_aux_dir.
 my $automake_will_process_aux_dir = 0;
 
@@ -561,7 +561,7 @@ my %dep_files;
 my @dist_targets;
 
 # Keep track of all programs declared in this Makefile, without
-# $(EXEEXT).  @substitution@ are not listed.
+# $(EXEEXT).  @substitutions@ are not listed.
 my %known_programs;
 
 # Keys in this hash are the basenames of files which must depend on
@@ -6824,7 +6824,7 @@ sub file_contents_internal ($$$%)
 	  my $flat_deps = &flatten ($dependencies);
 	  my @deps = split (' ', $flat_deps);
 
-	  foreach (split (' ' , $targets))
+	  foreach (split (' ', $targets))
 	    {
 	      # FIXME: 1. We are not robust to people defining several targets
 	      # at once, only some of them being in %dependencies.  The
