@@ -57,7 +57,7 @@ New in 1.10a:
     Note that Automake will never overwrite an existing COPYING file,
     even when the `--force-missing' option is used.
 
-  - Automake ships and install man pages for automake and aclocal now.
+  - Automake ships and installs man pages for automake and aclocal now.
 
   - New shorthand `$(pkglibexecdir)' for `$(libexecdir)/@PACKAGE@'.
 
@@ -72,7 +72,7 @@ New in 1.10a:
     Both install and uninstall may sometimes enter (`cd' into) the target
     installation directory now, when no build-local scripts are used.
 
-    For builtin rules, `make install' now fails reliably if installation
+    For built-in rules, `make install' now fails reliably if installation
     of a file failed.  Conversely, `make uninstall' even succeeds when
     issued multiple times.
 
