@@ -1,3 +1,9 @@
+2008-11-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* NEWS: Fix typos.
+	* automake.in: Fix typos in comments.  Remove extraneous
+	whitespace.
+
 2008-11-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Cope with absent Perl modules threads and Thread::Queue.
